# Selenium-Utils

./: .gitignore  README.md  pyproject.toml
selenium_utils/: __init__.py
tests/: test_driver_selenium.py
